[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/sprites/menu_01_sprite.png" type="Texture" id=1]
[ext_resource path="res://src/fonts/font_18.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scripts/menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://src/sprites/loading_sprite.png" type="Texture" id=4]
[ext_resource path="res://src/fonts/font_12.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 40, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="MainMenu" type="Control"]
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BackgroundImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1240.0
margin_bottom = 728.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="ContractContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 340.0
margin_top = 145.0

[node name="NameContainer" type="HBoxContainer" parent="ContractContainer"]
margin_right = 174.0
margin_bottom = 19.0

[node name="LabelNameTitle" type="Label" parent="ContractContainer/NameContainer"]
margin_right = 50.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Name:"

[node name="LabelNameValue" type="Label" parent="ContractContainer/NameContainer"]
margin_left = 54.0
margin_right = 114.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Newbie"

[node name="LastTravelContainer" type="HBoxContainer" parent="ContractContainer"]
margin_top = 23.0
margin_right = 174.0
margin_bottom = 42.0

[node name="LabelLastTravelTitle" type="Label" parent="ContractContainer/LastTravelContainer"]
margin_right = 120.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Last Travel:"

[node name="LabelLastTravelValue" type="Label" parent="ContractContainer/LastTravelContainer"]
margin_left = 124.0
margin_right = 174.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Never"

[node name="TravelsMadeContainer" type="HBoxContainer" parent="ContractContainer"]
margin_top = 46.0
margin_right = 174.0
margin_bottom = 65.0

[node name="LabelTravelsMadeTitle" type="Label" parent="ContractContainer/TravelsMadeContainer"]
margin_right = 130.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Travels made:"

[node name="LabelTravelsMadeValue" type="Label" parent="ContractContainer/TravelsMadeContainer"]
margin_left = 134.0
margin_right = 144.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="BestDistanceContainer" type="HBoxContainer" parent="ContractContainer"]
margin_top = 69.0
margin_right = 174.0
margin_bottom = 88.0

[node name="LabelMaxDistanceTitle" type="Label" parent="ContractContainer/BestDistanceContainer"]
margin_right = 140.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Best distance:"

[node name="LabelMaxDistanceValue" type="Label" parent="ContractContainer/BestDistanceContainer"]
margin_left = 144.0
margin_right = 154.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="InputContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 498.0
margin_top = 484.0
margin_right = 60.0
margin_bottom = 19.0

[node name="InputPlayerName" type="LineEdit" parent="InputContainer"]
margin_right = 120.0
margin_bottom = 19.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
align = 1
max_length = 16
placeholder_text = "Your Name"
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 490.0
margin_top = 530.0

[node name="CenterContainer" type="VBoxContainer" parent="ButtonContainer"]
margin_left = 34.0
margin_right = 103.0
margin_bottom = 20.0

[node name="ButtonContinue" type="Button" parent="ButtonContainer/CenterContainer"]
margin_right = 69.0
margin_bottom = 20.0
text = "Continue"

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonContainer"]
margin_right = 137.0
margin_bottom = 20.0

[node name="ButtonStart" type="Button" parent="ButtonContainer/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="ButtonChangeUser" type="Button" parent="ButtonContainer/HBoxContainer"]
margin_left = 45.0
margin_right = 137.0
margin_bottom = 20.0
text = "Change User"

[node name="LeftDownContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 580.0
margin_right = 500.0

[node name="LabelError" type="Label" parent="LeftDownContainer"]
margin_right = 490.0
margin_bottom = 13.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Error test"

[node name="RightDownContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 970.0
margin_top = 540.0

[node name="AnimatedLoad" type="AnimatedSprite" parent="RightDownContainer"]
scale = Vector2( 2, 2 )
frames = SubResource( 16 )
frame = 2
playing = true

[connection signal="text_changed" from="InputContainer/InputPlayerName" to="." method="_on_InputPlayerName_text_changed"]
[connection signal="pressed" from="ButtonContainer/CenterContainer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
[connection signal="pressed" from="ButtonContainer/HBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ButtonContainer/HBoxContainer/ButtonChangeUser" to="." method="_on_ButtonChangeUser_pressed"]
